fixe: shading dimensions on mobile

--- a/src/assets/styles/embla.css
+++ b/src/assets/styles/embla.css
@@ -31,14 +31,14 @@ html, body {
 
 shading {
 	background: rgba(0, 0, 0, 0.3);
-	height: 100%;
+	width: 100dvw;
+	height: 100dvh;
 	left: 0;
 	opacity: 0;
 	pointer-events: none;
 	position: fixed;
 	top: 0;
 	transition: all .3s ease;
-	width: 100%;
 	z-index: 10;
 }
 
